--- a/style.css
+++ b/style.css
@@ -3,17 +3,12 @@
     margin: 0;
 }
 
-header{
-    background:url(images/headerBack.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
 ul{
     list-style-type: none;
     background-color: transparent;
     overflow: hidden;
+    background-color: black;
     
 }
 
@@ -67,6 +62,10 @@ img{
     padding: 200px 200px;
     text-align: center;
     color: white;
+    background:url(images/headerBack.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .welcome h1{
