some minor chages to images and added alt attribute

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ li a{
     display: block;
     text-decoration: none;
     color: white;
-    padding:20px 40px;
+    padding:30px 40px;
     transition: 0.4s ease;
 }
 
@@ -33,6 +33,7 @@ li a:hover{
 
 main{
     text-align: center;
+    margin: 20px 20px 50px;
 }
 
 footer{
